# openusdbuildtest

./: .gitignore  0-build-conan.sh  1-build.sh  1-clone-openusd.sh  2-build-with-own-deps.sh  CMakeLists.txt  main.cpp
.github/workflows/: build.yml
